momentum-mouse (0.4.0) unstable; urgency=medium

  * Rebrand to Momentum mouse
  * Lower cutoff so 0.1 sensitivity still works

 -- Ash Martian <dev@ashmartian.com>  Mon, 09 Mar 2024 12:00:00 +0000

momentum-mouse (0.3.0) unstable; urgency=medium

  * Simplified configuration system to use only system-wide config
  * GUI now updates system config directly with admin privileges
  * Removed complex user config detection logic

 -- Ash Martian <dev@ashmartian.com>  Mon, 09 Mar 2024 12:00:00 +0000

momentum-mouse (0.1.2) unstable; urgency=medium

  * Increased default friction to 2.0 for better scrolling control
  * Initial release

 -- Ash Martian <dev@ashmartian.com>  Sat, 08 Mar 2024 23:00:00 +0000

momentum-mouse (0.1.1) unstable; urgency=medium                                                                                   
                                                                                                                                     
  * Initial release.                                                                                                                
                                                                                                                                     
 -- Ash Martian <dev@ashmartian.com>  Sat, 08 Mar 2024 20:00:00 +0000