@@ -13,6 +13,7 @@
 #define DEFAULT_MULTIPLIER  1.0
 #define DEFAULT_FRICTION    2.0
 #define DEFAULT_MAX_VELOCITY 0.8
+#define DEFAULT_SENSITIVITY_DIVISOR 1.0
 
 // System-wide config file path
 #define SYSTEM_CONFIG_FILE "/etc/momentum_mouse.conf"
@@ -84,12 +85,14 @@ static void on_apply_clicked(GtkWidget *widget, gpointer data) {
     GtkWidget *fric_scale = widgets[2];
     GtkWidget *vel_scale = widgets[3];
     GtkWidget *natural_switch = widgets[4];
+    GtkWidget *grab_switch = widgets[5];
 
     gdouble sensitivity = gtk_range_get_value(GTK_RANGE(sens_scale));
     gdouble multiplier = gtk_range_get_value(GTK_RANGE(mult_scale));
     gdouble friction = gtk_range_get_value(GTK_RANGE(fric_scale));
     gdouble max_velocity = gtk_range_get_value(GTK_RANGE(vel_scale));
     gboolean natural = gtk_switch_get_active(GTK_SWITCH(natural_switch));
+    gboolean grab = gtk_switch_get_active(GTK_SWITCH(grab_switch));
 
     // Load existing config, update values, and save.
     GKeyFile *config = load_config();
@@ -98,6 +101,7 @@ static void on_apply_clicked(GtkWidget *widget, gpointer data) {
     g_key_file_set_double(config, CONFIG_GROUP, "friction", friction);
     g_key_file_set_double(config, CONFIG_GROUP, "max_velocity", max_velocity);
     g_key_file_set_boolean(config, CONFIG_GROUP, "natural", natural);
+    g_key_file_set_boolean(config, CONFIG_GROUP, "grab", grab);
     
     // Optionally update the GNOME setting
     set_gnome_natural_scrolling(natural);
@@ -175,21 +179,70 @@ int main(int argc, char *argv[]) {
 
     // Create main window.
     GtkWidget *window = gtk_window_new(GTK_WINDOW_TOPLEVEL);
-    gtk_window_set_title(GTK_WINDOW(window), "momentum mouse Settings");
-    gtk_window_set_default_size(GTK_WINDOW(window), 400, 300);
+    gtk_window_set_title(GTK_WINDOW(window), "Momentum Mouse");
+    gtk_window_set_default_size(GTK_WINDOW(window), 400, 350);
     g_signal_connect(window, "destroy", G_CALLBACK(gtk_main_quit), NULL);
 
-    // Create a grid for layout.
+    // Create a box for the main layout (vertical)
+    GtkWidget *main_box = gtk_box_new(GTK_ORIENTATION_VERTICAL, 10);
+    gtk_container_set_border_width(GTK_CONTAINER(main_box), 10);
+    gtk_container_add(GTK_CONTAINER(window), main_box);
+    
+    // Add the icon at the top
+    GtkWidget *icon_image = NULL;
+    
+    // Try to load the icon from standard locations
+    const gchar *icon_paths[] = {
+        "/usr/share/icons/hicolor/128x128/apps/momentum_mouse.png",
+        "/usr/share/pixmaps/momentum_mouse.png",
+        "../debian/icons/momentum_mouse.png"  // For development environment
+    };
+    
+    for (unsigned int i = 0; i < G_N_ELEMENTS(icon_paths); i++) {
+        if (g_file_test(icon_paths[i], G_FILE_TEST_EXISTS)) {
+            icon_image = gtk_image_new_from_file(icon_paths[i]);
+            break;
+        }
+    }
+    
+    if (icon_image) {
+        // Resize the icon to 256x256
+        GdkPixbuf *original_pixbuf = gtk_image_get_pixbuf(GTK_IMAGE(icon_image));
+        if (original_pixbuf) {
+            GdkPixbuf *resized_pixbuf = gdk_pixbuf_scale_simple(
+                original_pixbuf, 
+                256,  // width
+                256,  // height
+                GDK_INTERP_BILINEAR);
+                
+            if (resized_pixbuf) {
+                // Replace the image with the resized version
+                gtk_image_set_from_pixbuf(GTK_IMAGE(icon_image), resized_pixbuf);
+                g_object_unref(resized_pixbuf);
+            }
+        }
+        
+        // Create a centered container for the icon
+        GtkWidget *icon_box = gtk_box_new(GTK_ORIENTATION_HORIZONTAL, 0);
+        gtk_box_pack_start(GTK_BOX(icon_box), icon_image, TRUE, FALSE, 0);
+        gtk_box_pack_start(GTK_BOX(main_box), icon_box, FALSE, FALSE, 10);
+    }
+    
+    // Add a title label
+    GtkWidget *title_label = gtk_label_new(NULL);
+    gtk_label_set_markup(GTK_LABEL(title_label), "<span size='large' weight='bold'>Momentum Mouse Settings</span>");
+    gtk_box_pack_start(GTK_BOX(main_box), title_label, FALSE, FALSE, 5);
+    
+    // Create a grid for the settings
     GtkWidget *grid = gtk_grid_new();
     gtk_grid_set_row_spacing(GTK_GRID(grid), 10);
     gtk_grid_set_column_spacing(GTK_GRID(grid), 10);
-    gtk_container_set_border_width(GTK_CONTAINER(grid), 10);
-    gtk_container_add(GTK_CONTAINER(window), grid);
+    gtk_box_pack_start(GTK_BOX(main_box), grid, TRUE, TRUE, 0);
 
     // Sensitivity slider
     GtkWidget *sens_label = gtk_label_new("Sensitivity:");
     gtk_widget_set_halign(sens_label, GTK_ALIGN_END);
-    GtkWidget *sens_scale = gtk_scale_new_with_range(GTK_ORIENTATION_HORIZONTAL, 0.1, 3.0, 0.1);
+    GtkWidget *sens_scale = gtk_scale_new_with_range(GTK_ORIENTATION_HORIZONTAL, 0.1, 4.0, 0.1);
     gtk_range_set_value(GTK_RANGE(sens_scale), sensitivity);
     gtk_widget_set_hexpand(sens_scale, TRUE);
     gtk_widget_set_halign(sens_scale, GTK_ALIGN_FILL);
@@ -201,7 +254,7 @@ int main(int argc, char *argv[]) {
     // Multiplier slider
     GtkWidget *mult_label = gtk_label_new("Multiplier:");
     gtk_widget_set_halign(mult_label, GTK_ALIGN_END);
-    GtkWidget *mult_scale = gtk_scale_new_with_range(GTK_ORIENTATION_HORIZONTAL, 0.1, 3.0, 0.1);
+    GtkWidget *mult_scale = gtk_scale_new_with_range(GTK_ORIENTATION_HORIZONTAL, 0.1, 10.0, 0.1);
     gtk_range_set_value(GTK_RANGE(mult_scale), multiplier);
     gtk_widget_set_hexpand(mult_scale, TRUE);
     gtk_widget_set_halign(mult_scale, GTK_ALIGN_FILL);
@@ -254,18 +307,36 @@ int main(int argc, char *argv[]) {
     gtk_widget_set_halign(natural_switch, GTK_ALIGN_END);
     gtk_widget_set_tooltip_text(natural_switch, 
         "When enabled, scrolling direction is reversed to match touchpad behavior (content follows finger movement).");
-    gtk_grid_attach(GTK_GRID(grid), natural_label, 0, 4, 1, 1);
-    gtk_grid_attach(GTK_GRID(grid), natural_switch, 1, 4, 1, 1);
+    gtk_grid_attach(GTK_GRID(grid), natural_label, 0, 5, 1, 1);
+    gtk_grid_attach(GTK_GRID(grid), natural_switch, 1, 5, 1, 1);
+    
+    // Grab device switch
+    GtkWidget *grab_label = gtk_label_new("Exclusive Grab:");
+    gtk_widget_set_halign(grab_label, GTK_ALIGN_END);
+    GtkWidget *grab_switch = gtk_switch_new();
+
+    // Read grab setting from config
+    gboolean grab = TRUE; // Default to true
+    if (g_key_file_has_key(config, CONFIG_GROUP, "grab", NULL)) {
+        grab = g_key_file_get_boolean(config, CONFIG_GROUP, "grab", NULL);
+    }
+
+    gtk_switch_set_active(GTK_SWITCH(grab_switch), grab);
+    gtk_widget_set_halign(grab_switch, GTK_ALIGN_END);
+    gtk_widget_set_tooltip_text(grab_switch, 
+        "When enabled, mouse input is captured exclusively for better performance, especially at low sensitivity.");
+    gtk_grid_attach(GTK_GRID(grid), grab_label, 0, 6, 1, 1);
+    gtk_grid_attach(GTK_GRID(grid), grab_switch, 1, 6, 1, 1);
 
     // Apply button
     GtkWidget *apply_button = gtk_button_new_with_label("Apply");
     gtk_widget_set_hexpand(apply_button, TRUE);
     gtk_widget_set_halign(apply_button, GTK_ALIGN_FILL);
-    gtk_grid_attach(GTK_GRID(grid), apply_button, 0, 5, 2, 1);
+    gtk_grid_attach(GTK_GRID(grid), apply_button, 0, 7, 2, 1);
     
     // Create an array of widget pointers to pass as data
     GtkWidget *widgets[] = {
-        sens_scale, mult_scale, fric_scale, vel_scale, natural_switch
+        sens_scale, mult_scale, fric_scale, vel_scale, natural_switch, grab_switch
     };
     g_signal_connect(apply_button, "clicked", G_CALLBACK(on_apply_clicked), widgets);
 
